@@ -18,19 +18,28 @@
 
 package ai.grakn.client;
 
+import ai.grakn.GraknConfigKey;
+import ai.grakn.GraknSystemProperty;
 import ai.grakn.engine.TaskId;
 import ai.grakn.util.REST;
+import ai.grakn.util.SimpleURI;
+import mjson.Json;
+import org.apache.http.HttpResponse;
+import org.apache.http.client.ResponseHandler;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
+import javax.ws.rs.core.UriBuilder;
 import java.io.BufferedReader;
+import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.MalformedURLException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import mjson.Json;
-import org.apache.http.HttpResponse;
-import org.apache.http.client.ResponseHandler;
+import java.util.Properties;
 
 import static ai.grakn.util.REST.Request.ID_PARAMETER;
 import static java.util.stream.Collectors.joining;
@@ -41,6 +50,20 @@ import static java.util.stream.Collectors.joining;
  * @author alexandraorth
  */
 public class Client {
+
+    private static final Logger LOG = LoggerFactory.getLogger(Client.class);
+
+    private enum EngineStatus {
+        Running(0),
+        NotRunning(1),
+        Error(2);
+
+        private final int exitCode;
+
+        EngineStatus(int exitCode) {
+            this.exitCode = exitCode;
+        }
+    }
 
     final ResponseHandler<Json> asJsonHandler = response -> {
         try(BufferedReader reader = new BufferedReader(
@@ -55,32 +78,90 @@ public class Client {
             return reader.lines().collect(joining("\n"));
         }
     };
-    
+
+    public static void main(String[] args) {
+        EngineStatus engineStatus;
+        try {
+            engineStatus = checkServerRunning();
+        } catch (Exception e) {
+            LOG.error("An unexpected error occurred", e);
+            engineStatus = EngineStatus.Error;
+        }
+        System.exit(engineStatus.exitCode);
+    }
+
+    private static EngineStatus checkServerRunning() throws IOException {
+        String confPath = GraknSystemProperty.CONFIGURATION_FILE.value();
+
+        if (confPath == null) {
+            String msg = "System property `" + GraknSystemProperty.CONFIGURATION_FILE.key() + "` has not been set";
+            LOG.error(msg);
+            return EngineStatus.Error;
+        }
+
+        Properties properties = new Properties();
+        try (FileInputStream stream = new FileInputStream(confPath)) {
+            properties.load(stream);
+        }
+
+        String host = properties.getProperty(GraknConfigKey.SERVER_HOST_NAME.name());
+        int port = Integer.parseInt(properties.getProperty(GraknConfigKey.SERVER_PORT.name()));
+        if (serverIsRunning(new SimpleURI(host, port))) {
+            LOG.info("Server " + host + ":" + port + " is running");
+            return EngineStatus.Running;
+        } else {
+            LOG.info("Server " + host + ":" + port + " is not running");
+            return EngineStatus.NotRunning;
+        }
+    }
 
     /**
      * Check if Grakn Engine has been started
      *
      * @return true if Grakn Engine running, false otherwise
      */
-    public static boolean serverIsRunning(String uri) {
+    public static boolean serverIsRunning(SimpleURI uri) {
         try {
-            HttpURLConnection connection = (HttpURLConnection)
-                    new URL("http://" + uri + REST.WebPath.System.CONFIGURATION).openConnection();
+            URL url = UriBuilder.fromUri(uri.toURI()).path(REST.WebPath.KB).build().toURL();
+
+            HttpURLConnection connection = (HttpURLConnection) mapQuadZeroRouteToLocalhost(url).openConnection();
+
             connection.setRequestMethod("GET");
-            connection.connect();
+
+            try {
+                connection.connect();
+            } catch (IOException e) {
+                // If this fails, then the server is not reachable
+                return false;
+            }
 
             InputStream inputStream = connection.getInputStream();
             if (inputStream.available() == 0) {
+                LOG.error("input stream is not available");
                 return false;
             }
+            return true;
         } catch (IOException e) {
-            return false;
+            throw new RuntimeException(e);
         }
-        return true;
+    }
+
+    private static URL mapQuadZeroRouteToLocalhost(URL originalUrl) throws MalformedURLException {
+        final String QUAD_ZERO_ROUTE = "http://0.0.0.0";
+
+        URL mappedUrl;
+        if ((originalUrl.getProtocol() + originalUrl.getHost()).equals(QUAD_ZERO_ROUTE)) {
+            mappedUrl = new URL(
+                    originalUrl.getProtocol(), "localhost", originalUrl.getPort(), REST.WebPath.KB);
+        } else {
+            mappedUrl = originalUrl;
+        }
+
+        return mappedUrl;
     }
 
     protected String convert(String uri, TaskId id){
-        return uri.replace(ID_PARAMETER, id.getValue());
+        return uri.replace(ID_PARAMETER, id.value());
     }
 
     protected String exceptionFrom(HttpResponse response) throws IOException {
